fixed background image problem not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url(C:\Users\BnGamer\Documents\VC\Internship\XRChemist\public\background.png);
+  background-image: url(../public/background.png);
   background-repeat: no-repeat;
 }
